--- a/Paginas/bienesraices/composer.json
+++ b/Paginas/bienesraices/composer.json
@@ -8,7 +8,9 @@
             "email": "89033@sistemas.frc.utn.edu.ar"
         }
     ],
-    "require": {},
+    "require": {
+        "intervention/image": "^2.5"
+    },
     "autoload": {
         "psr-4": {
             "App\\" : "./classes"
