--- a/Paginas/AppSalon_PHP_MVC_JS_SASS/composer.json
+++ b/Paginas/AppSalon_PHP_MVC_JS_SASS/composer.json
@@ -6,7 +6,8 @@
         "psr-4": {
             "MVC\\" : "./",
             "Controllers\\" : "./controllers",
-            "Model\\" : "./models"
+            "Model\\" : "./models",
+            "Classes\\" : "./classes"
             
         }
     },
@@ -16,5 +17,7 @@
             "email": "89033@sistemas.frc.utn.edu.ar"
         }
     ],
-    "require": {}
+    "require": {
+        "phpmailer/phpmailer": "^6.9"
+    }
 }
