--- a/Paginas/DevWebCamp_inicio/includes/.env
+++ b/Paginas/DevWebCamp_inicio/includes/.env
@@ -3,9 +3,9 @@ DB_USER=root
 DB_PASS=root
 DB_NAME=devwebcamp
 
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_PASS=
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
+EMAIL_USER=4a1080fbab710b
+EMAIL_PASS=8b7816b0a0d76b
 
 HOST=http://localhost:3000
